<resources>
    <string name="app_name">Ежедневник</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="repeatMenu">
        <item>Без повторов</item>
        <item>Один раз в день</item>
        <item>Один раз в неделю</item>
        <item>Один раз в месяц</item>
        <item>Один раз в год</item>
        <item>Другое...</item>
    </string-array>

    <string name="task_1">Задача 1</string>
    <string name="task_2">Задача 2</string>
    <string name="task_3">Задача 3</string>
    <string name="task_4">Задача 4</string>
    <string name="task_5">Задача 5</string>
    <string name="task_6">Задача 6</string>
    <string name="task_7">Задача 7</string>

    <string name="CONST_NAME_VIEWING_A_TASK">Просмотр задачи</string>viewing a task

    <string name="CONST_NAME_DONE">Выполненные</string>

    <string name="CONST_NAME_NOT_DONE">Невыполненные</string>

    <string name="CONST_NAME_DONE_TASKS">Выполненные задачи отсутствуют</string>

    <string name="CONST_NAME_NOT_DONE_TASKS">Невыполненные задачи отсутствуют</string>


    <string name="CONST_NAME_WRONG_TIME">Некорректное время</string>

    <string name="CONST_NAME_NO_TASKS">Задачи отсутствуют</string>

    <string name="CONST_NAME_NO_TASKS_FOR_THE_NEXT_DAYS">Задачи на следующие дни отсутствуют</string>

    <string name="CONST_NAME_ISEMPTY_FIELD">Заполните поля!</string>

    <string name="CONST_NAME_TITLE_NOTIF"> Задачи на сегодня </string>
    <string name="CONST_NAME_TEXT_NOTIF">Не забудь про задачу: </string>

    <!--Константы для страницы Задачи-->
    <string name="CONST_NAME_TASKS_PAGE">Задачи</string>
    <string name="CONST_NAME_CALENDAR">Календарь</string>

    <!--Константы для страницы Главная-->
    <string name="CONST_NAME_HOME_PAGE">Главная</string>
    <string name="CONST_NAME_TODAY_DATA">RU</string>

    <!--Константы для страницы Настройки-->
    <string name="CONST_NAME_SETTINGS_PAGE">Настройки</string>
    <string name="CONST_NAME_LANGUAGE">Язык</string>
    <string name="CONST_NAME_THEME">Тема</string>
    <string name="CONST_NAME_NOTIFICATIONS">Уведомления</string>

    <!--Константы для фрагментов изменения и добавления задач-->
    <string name="CONST_NAME_ADD_TASK">Добавление задачи</string>
    <string name="CONST_NAME_EDIT_TASK">Изменение задачи</string>
    <string name="CONST_NAME_HEADER">Заголовок</string>

    <string name="CONST_NAME_DATE">Дата</string>
    <string name="CONST_NAME_TIME">Время</string>
    <string name="CONST_NAME_DESCRIPTION">Описание</string>
    <string name="CONST_NAME_REPEAT">Повтор</string>

    <!--Константы для диалоговых окон-->
    <string name="CONST_NAME_OK">ОК</string>
    <string name="CONST_NAME_CANCEL">ОТМЕНА</string>

    <string name="CONST_NAME_THEME_SELECTION">Выберите тему</string>

    <string name="CONST_NAME_LANGUAGE_SELECTION">Выберите язык</string>
    <string name="CONST_NAME_ENGLISH">English</string>
    <string name="CONST_NAME_RUSSIAN">Русский</string>

    <string name="CONST_NAME_NOTIFICATION_SETTINGS">Настройка уведомлений</string>
    <string name="CONST_NAME_NOTIFICATIONS_ON">Включены</string>
    <string name="CONST_NAME_NOTIFICATIONS_OFF">Выключены</string>

    <string name="CONST_NAME_CONFIRMATION">Вы уверены?</string>
    <string name="CONST_NAME_CONFIRMATION_RETURN">Вы уверены? Изменения не будут сохранены!</string>

    <string name="CONST_NAME_TASK_SAVED">Задача сохранена</string>
    <string name="CONST_NAME_TASK_DELETED">Задача удалена</string>
    <string name="CONST_NAME_SELECTED_LANGUAGE">Выбран язык</string>











    <!-- TODO: Remove or change this placeholder text -->
</resources>