<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    style="@style/SCREEN"
    tools:context=".SettingsPage.SettingsFragment"
    android:id="@+id/fragSettings"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TOOLBAR">

        <TextView
            android:id="@+id/textSettingsToolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:text="@string/CONST_NAME_SETTINGS_PAGE"

            android:textSize="22sp"

            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>


    <Button
        android:id="@+id/buttonLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="204dp"
        android:layout_marginHorizontal="10dp"
        style="@style/BUTTON"

        android:text="@string/CONST_NAME_LANGUAGE"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/baseline_language_24"
        android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"/>


    <Button
        android:id="@+id/buttonNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="261dp"
        android:layout_marginHorizontal="10dp"
        style="@style/BUTTON"


        android:text="@string/CONST_NAME_NOTIFICATIONS"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/baseline_notifications_active_24"
        android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"/>


    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="373dp"
        android:layout_height="47dp"

        android:layout_centerHorizontal="true"

        android:layout_marginVertical="147dp"
        android:background="@drawable/round_corners"
        android:drawableLeft="@drawable/baseline_palette_24"
        android:paddingLeft="5dp">


    </Switch>
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TEXT"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:text="@string/CONST_NAME_THEME"

        android:layout_marginVertical="160dp"
        />
</RelativeLayout>