<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:id="@+id/createTaskFrag"
    tools:context=".TasksPage.FragmentCreateTask">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TOOLBAR">

        <TextView
            android:id="@+id/textSettingsToolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CONST_NAME_ADD_TASK"
            style="@style/TEXT"
            android:textSize="22sp"
            android:textStyle="normal"
            android:layout_gravity="center"/>



    </androidx.appcompat.widget.Toolbar>



    <EditText
        android:id="@+id/headerToday"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="70dp"
        android:inputType="text"
        android:hint="@string/CONST_NAME_HEADER"
        android:maxLength="40"
        android:scrollbars="vertical">

    </EditText>




    <EditText
        android:id="@+id/setTimeToday"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginVertical="135dp"
        android:inputType="time"
        android:hint="@string/CONST_NAME_TIME">

    </EditText>





    <EditText
        android:id="@+id/descriptionToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="200dp"
        android:inputType="textMultiLine"
        android:maxHeight="200dp"
        android:maxLength="500"
        android:scrollbars="vertical"
        android:hint="@string/CONST_NAME_DESCRIPTION">

    </EditText>



    <Button
        android:id="@+id/buttonConfirmTaskToday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="360dp"
        android:background="@drawable/baseline_check_24"/>

    <Button
        android:id="@+id/todayTaskBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/baseline_arrow_back_24">

    </Button>

    <Button
        android:id="@+id/buttonSetTaskTimeToday"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="145dp"
        android:layout_marginLeft="365dp"

        android:background="@drawable/baseline_access_time_24" />




</RelativeLayout>